--- a/.gitignore
+++ b/.gitignore
@@ -195,5 +195,5 @@ pyrightconfig.json
 pyvenv.cfg
 pip-selfcheck.json
 
-db/config.ini
+./db/config.ini
 # End of https://www.toptal.com/developers/gitignore/api/python,venv,database
